WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214839
Text manipulation should not extract non-breaking spaces
https://bugs.webkit.org/show_bug.cgi?id=214839
Summary
Text manipulation should not extract non-breaking spaces
Sihui Liu
Reported
2020-07-27 11:17:13 PDT
...
Attachments
Patch
(4.42 KB, patch)
2020-07-27 11:25 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-07-27 11:17:35 PDT
<
rdar://problem/64113531
>
Sihui Liu
Comment 2
2020-07-27 11:25:50 PDT
Created
attachment 405299
[details]
Patch
EWS
Comment 3
2020-07-27 15:02:07 PDT
Committed
r264947
: <
https://trac.webkit.org/changeset/264947
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405299
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug