Text manipulation should not extract non-breaking spaces https://bugs.webkit.org/show_bug.cgi?id=214839 <rdar://problem/64113531>

Patch by Sihui Liu <sihui_liu@appe.com> on 2020-07-27
Reviewed by Wenson Hsieh.

Source/WebCore:

Spaces are very likely to be dropped during translation. And non-breaking space, if dropped, is likely to affect
layout of web page.

API test: TextManipulation.StartTextManipulationIgnoresSpaces

* editing/TextManipulationController.cpp:
(WebCore::isNotSpace):
(WebCore::TextManipulationController::parse):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/227662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264947 268f45cc-cd09-0410-ab3c-d52691b4dbfc